Add 60+ interests to profile setup and edit screens

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -501,6 +501,81 @@
                         </select>
                     </div>
 
+                    <!-- Interests Section -->
+                    <div class="edit-section" style="margin-bottom: 24px;">
+                        <h4 style="margin-bottom: 8px;">Your Interests</h4>
+                        <p class="section-hint" style="color: var(--text-muted); font-size: 0.85rem; margin-bottom: 12px;">Select up to 6 interests</p>
+                        <div class="interests-selector" id="setupInterestsSelector" style="display: flex; flex-wrap: wrap; gap: 8px;">
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎧 Podcasts</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">👟 Running</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">💪 Pilates</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">💃 Dancing</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🏋️ Weight lifting</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🏀 Basketball</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🏈 Football</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">⚾️ Baseball</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">⚽️ Soccer</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎾 Tennis/Pickleball</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🏐 Volleyball</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎳 Bowling</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🏒 Hockey</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🥍 Lacrosse</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎿 Skiing</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🏂 Snowboarding</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🏊 Swimming</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🚴 Biking</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">⛳️ Golf</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🧗 Rock climbing</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎨 Painting</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">✍️ Drawing</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">📝 Writing</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎤 Singing</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎸 Concerts</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎶 Playing music</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎵 Listening to music</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🥊 Martial arts</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🌳 Nature</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🏄 Surfing</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🤣 Stand up comedy</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">💻 Tech</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🔬 Science</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">👩‍🌾 Gardening</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🥕 Holistic living</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🪴 Plants</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎣 Fishing</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🏹 Hunting</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🏛️ Politics</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🗣️ Advocacy</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🤝 Volunteering</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🍜 Foodie</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🙏 Religion</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">👗 Fashion</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎲 Board games</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🔨 DIY</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">📜 History</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">⚡️ Raves</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🔮 Astrology</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🍿 Movies</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">📺 TV shows</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🍷 Wine</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🍺 Craft Beer</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🧁 Baking</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🏖️ Beach Days</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">⛺️ Camping</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🍃 420</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">📸 Photography</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🥾 Hiking</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">☕ Coffee</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">📚 Reading</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🍳 Cooking</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">✈️ Travel</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🎮 Gaming</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🧘 Yoga</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🐕 Dogs</button>
+                            <button class="interest-chip" onclick="toggleSetupInterest(this)">🐱 Cats</button>
+                        </div>
+                    </div>
+
                     <!-- Bio -->
                     <div class="input-group" style="margin-bottom: 24px;">
                         <label>Bio <span style="color: var(--text-muted); font-size: 0.85rem;">(Tell potential matches about yourself)</span></label>
@@ -2811,23 +2886,74 @@
                     <div class="edit-section">
                         <h4>Interests</h4>
                         <p class="section-hint">Select up to 6 interests</p>
-                        <div class="interests-selector">
-                            <button class="interest-chip selected" onclick="toggleInterest(this)">📸 Photography</button>
-                            <button class="interest-chip selected" onclick="toggleInterest(this)">🥾 Hiking</button>
-                            <button class="interest-chip selected" onclick="toggleInterest(this)">☕ Coffee</button>
-                            <button class="interest-chip" onclick="toggleInterest(this)">🎵 Music</button>
-                            <button class="interest-chip" onclick="toggleInterest(this)">🍳 Cooking</button>
-                            <button class="interest-chip selected" onclick="toggleInterest(this)">✈️ Travel</button>
-                            <button class="interest-chip" onclick="toggleInterest(this)">📚 Reading</button>
-                            <button class="interest-chip" onclick="toggleInterest(this)">🎮 Gaming</button>
-                            <button class="interest-chip" onclick="toggleInterest(this)">🎨 Art</button>
-                            <button class="interest-chip" onclick="toggleInterest(this)">🏋️ Fitness</button>
-                            <button class="interest-chip" onclick="toggleInterest(this)">🎬 Movies</button>
+                        <div class="interests-selector" id="editInterestsSelector">
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎧 Podcasts</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">👟 Running</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">💪 Pilates</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">💃 Dancing</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🏋️ Weight lifting</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🏀 Basketball</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🏈 Football</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">⚾️ Baseball</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">⚽️ Soccer</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎾 Tennis/Pickleball</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🏐 Volleyball</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎳 Bowling</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🏒 Hockey</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🥍 Lacrosse</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎿 Skiing</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🏂 Snowboarding</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🏊 Swimming</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🚴 Biking</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">⛳️ Golf</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🧗 Rock climbing</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎨 Painting</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">✍️ Drawing</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">📝 Writing</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎤 Singing</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎸 Concerts</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎶 Playing music</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎵 Listening to music</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🥊 Martial arts</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🌳 Nature</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🏄 Surfing</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🤣 Stand up comedy</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">💻 Tech</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🔬 Science</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">👩‍🌾 Gardening</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🥕 Holistic living</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🪴 Plants</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎣 Fishing</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🏹 Hunting</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🏛️ Politics</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🗣️ Advocacy</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🤝 Volunteering</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🍜 Foodie</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🙏 Religion</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">👗 Fashion</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎲 Board games</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🔨 DIY</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">📜 History</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">⚡️ Raves</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🔮 Astrology</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🍿 Movies</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">📺 TV shows</button>
                             <button class="interest-chip" onclick="toggleInterest(this)">🍷 Wine</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🍺 Craft Beer</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🧁 Baking</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🏖️ Beach Days</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">⛺️ Camping</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🍃 420</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">📸 Photography</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🥾 Hiking</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">☕ Coffee</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">📚 Reading</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🍳 Cooking</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">✈️ Travel</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🎮 Gaming</button>
+                            <button class="interest-chip" onclick="toggleInterest(this)">🧘 Yoga</button>
                             <button class="interest-chip" onclick="toggleInterest(this)">🐕 Dogs</button>
                             <button class="interest-chip" onclick="toggleInterest(this)">🐱 Cats</button>
-                            <button class="interest-chip" onclick="toggleInterest(this)">🧘 Yoga</button>
-                            <button class="interest-chip" onclick="toggleInterest(this)">🎯 Sports</button>
                         </div>
                     </div>
 
