Replace Square payment integration with embedded Stripe Payment Element

--- a/prototype/manager.html
+++ b/prototype/manager.html
@@ -20043,7 +20043,7 @@
                         { name: 'status', type: 'String', description: 'active/cancelled/expired' },
                         { name: 'startedAt', type: 'String', description: 'Start date' },
                         { name: 'expiresAt', type: 'String', description: 'Expiry date' },
-                        { name: 'paymentMethod', type: 'String', description: 'square/test' },
+                        { name: 'paymentMethod', type: 'String', description: 'stripe/test' },
                         { name: 'updatedAt', type: 'String', description: 'ISO timestamp' }
                     ]
                 },
