Update legal compliance docs, launch requirements, and prototype files

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -3840,7 +3840,7 @@
                             <div class="option-icon">📧</div>
                             <div class="option-content">
                                 <h4>Email Us</h4>
-                                <p>support@oith.app</p>
+                                <p>admin@oith.com</p>
                             </div>
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M9 18l6-6-6-6"/>
